--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
-    <title>Document</title>
+    <title>Bootstrap</title>
     <style>
       .im {
         height: 200px;
